<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwich Shop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_order_form_activity">Order form activity</string>
    <string name="radio_button_wheat">Wheat</string>
    <string name="radio_button_white">White</string>
    <string name="radio_button_rye">Rye</string>
    <string name="check_box_ketchup">Ketchup</string>
    <string name="check_box_mustard">Mustard</string>
    <string name="check_box_mayonnaise">Mayonnaise</string>
    <string name="check_box_pickle_relish">Pickle relish</string>
    <string name="check_box_guacamole">Guacamole</string>
    <string name="button_place_order">Place Order</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="button_confirmation_ok">Ok</string>
    <string name="button_confirmation_cancel">Cancel</string>
    <string name="text_view_these_are_the_condimentes">These are the condiments</string>
    <string name="text_view_this_bread_selected">This is the bread selected</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_selection">Enter a number of sandwich to make (Up to five).</string>
    <string name="edit_text_hint">EditText</string>
    <string name="button_go_ahead">Go Ahead!</string>
    <string name="text_view_order">This is your sandwich(es) order</string>

</resources>
